# fastapi-sanic-benchmark

./: README.md  pyproject.toml
api_benchmark/data/: array_data.py
api_benchmark/fastapi_api/: main.py  run.sh
api_benchmark/model/: request.py  response.py
api_benchmark/sanic_api/: run.sh  server.py
locust/: locustfile.py
