[tool.poetry]
name = "api-benchmark"
version = "0.1.0"
description = ""
authors = ["Vladimir Nikishov <vnikishov@openweather.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
gunicorn = "^21.2.0"
sanic = "^23.12.1"
pydantic = "^2.7.0"
numpy = "^1.26.4"
sanic-ext = "^23.12.0"
locust = "^2.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
